# kaleidogen

./: .ghcid  .gitignore  .travis-push-gh-pages.sh  .travis.yml  CNAME  LICENSE  README.md  Setup.hs  all.min.js  buildIcons.nix  cabal-ghcjs.project  cabal.project  default.nix  kaleidogen-sdl.nix  kaleidogen.cabal  playstore-privacy.md  project0.nix  render-headless.c
.github/workflows/: niv-updates.yml  test.yml
demo/: all.min.js  index.html
exe/: Kaleidogen.hs
headless/: Makefile  example.frag  example.vert  kaleidogen-gl-runner.c
logic/: DNA.hs
nix/: sources.json
src/: Animate.hs  AnimationFrame.hs  CacheKey.hs  CanvasSave.hs  DNA.hs  Demo.hs  Drag.hs  DragAnim.hs  Expression.hs  GLSL.hs  GenPNG.hs  Headless.hs  Img.hs  Kaleidogen.hs  KaleidogenAndroid.hs  KaleidogenSDL.hs  Lambda.hs  Layout.hs  Logic.hs  MainProgram.hs  MainWidget.hs  Mealy.hs  Presentation.hs  PresentationCmds.hs  PrettyRna.hs  Program.hs  ProgramScript.hs  RNA.hs  Random.hs  RunWidget.hs  SBNL.hs  SDLRunner.hs  SelectTwo.hs  ShaderCanvas.hs  Shaders.hs  Shapes.hs  Telegram.hs  TelegramMain.hs  TestLogic.hs  Tutorial.hs  (+2 more)
src-exe/: WKWebViewMain.hs  WarpMain.hs  WebKitGTKMain.hs
