cabal-version: 2.2
name: kaleidogen
version: 0.1
-- build-type: Custom
build-type: Simple
license: MIT
license-file: LICENSE
copyright: Joachim Breitner
author: Joachim Breitner
maintainer: Joachim Breitner <mail@joachim-breitner.de>
homepage: https://github.com/nomeata/kaleidogen
bug-reports: https://github.com/nomeata/kaleidogen/issues
synopsis: Grow kaleidoscopes
description:
category: Games

source-repository head
    type: git
    location: https://github.com/nomeata/kaleidogen

-- The jsaddle-hello-world example file has a more elaborate
-- setup including webkit and macos support. Removed for simplicity for now,
-- but should be evaluated later

common logic
    hs-source-dirs: src
    other-modules: DNA
    other-modules: RNA
    other-modules: GLSL
    other-modules: Expression
    other-modules: SelectTwo
    build-depends: base >=4.2 && <5
    build-depends: MonadRandom ==0.5.*
    build-depends: hashable ==1.2.*
    build-depends: containers
    build-depends: text
    build-depends: hex-text
    build-depends: formatting >= 6.3
    build-depends: bytestring
    build-depends: colour

common canvas-save
    hs-source-dirs: src
    other-modules: CanvasSave
    build-depends: base >=4.2 && <5
    build-depends: reflex-dom >= 0.4
    build-depends: text
    build-depends: jsaddle >=0.9.4 && <0.10
    build-depends: jsaddle-dom >=0.9.2 && <0.10
    build-depends: lens

common shader-canvas
    hs-source-dirs: src
    other-modules: ShaderCanvas
    other-modules: AnimationFrame
    other-modules: Animate
    build-depends: base >=4.2 && <5
    build-depends: reflex-dom >= 0.4
    build-depends: MonadRandom ==0.5.*
    build-depends: containers
    build-depends: jsaddle >=0.9.4 && <0.10
    build-depends: jsaddle-dom >=0.9.2 && <0.10
    build-depends: lens
    build-depends: ghcjs-dom >=0.9.2 && <0.10
    build-depends: text

executable kaleidogen
    import: logic, canvas-save, shader-canvas
    main-is: Kaleidogen.hs
    other-modules: Layout
    build-depends: base >=4.2 && <5
    build-depends: reflex-dom >= 0.4
    build-depends: MonadRandom ==0.5.*
    build-depends: text
    -- just for ghci. How to avoid?
    -- build-depends: QuickCheck
    hs-source-dirs: exe

    ghc-options: -main-is Kaleidogen
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

