cabal-version: 2.2
name: kaleidogen
version: 0.1
-- build-type: Custom
build-type: Simple
license: MIT
license-file: LICENSE
copyright: Joachim Breitner
author: Joachim Breitner
maintainer: Joachim Breitner <mail@joachim-breitner.de>
homepage: https://github.com/nomeata/kaleidogen
bug-reports: https://github.com/nomeata/kaleidogen/issues
synopsis: Grow kaleidoscopes
description:
category: Games

source-repository head
  type: git
  location: https://github.com/nomeata/kaleidogen

flag jsaddle
  default: True

flag sdl
  default: False

flag android
  default: False

flag clib
  default: False

flag headless
  default: False

flag telegram
  default: False

flag lambda
  default: False


-- The jsaddle-hello-world example file has a more elaborate
-- setup including webkit and macos support. Removed for simplicity for now,
-- but should be evaluated later

common static
  hs-source-dirs: src
  other-modules: DNA
  other-modules: RNA
  other-modules: GLSL
  other-modules: Shaders
  other-modules: CacheKey
  other-modules: Expression
  build-depends: text
  build-depends: hex-text
  build-depends: bytestring
  build-depends: base >=4.11 && <5
  build-depends: MonadRandom ==0.5.*
  build-depends: random-shuffle
  build-depends: colour
  build-depends: mtl
  build-depends: splitmix

common png
  other-modules: GenPNG
  other-modules: Img
  build-depends: temporary
  build-depends: typed-process
  build-depends: exceptions
  build-depends: JuicyPixels

common logic
  import: static
  hs-source-dirs: src
  other-modules: Logic
  other-modules: Drag
  other-modules: DragAnim
  other-modules: Tween
  other-modules: Program
  other-modules: ProgramScript
  other-modules: MainProgram
  other-modules: Shapes
  other-modules: Presentation
  other-modules: PresentationCmds
  other-modules: Layout
  other-modules: Tutorial
  build-depends: containers
  build-depends: ref-tf
  build-depends: splitmix

common canvas-save
  hs-source-dirs: src
  other-modules: CanvasSave
  build-depends: base >=4.11 && <5
  build-depends: text
  build-depends: jsaddle >=0.9.4 && <0.10
  build-depends: jsaddle-dom >=0.9.2 && <0.10
  build-depends: file-embed

common shader-canvas
  hs-source-dirs: src
  other-modules: ShaderCanvas
  build-depends: base >=4.11 && <5
  build-depends: MonadRandom ==0.5.*
  build-depends: containers
  build-depends: jsaddle >=0.9.4 && <0.10
  build-depends: jsaddle-dom >=0.9.2 && <0.10
  build-depends: ghcjs-dom >=0.9.2 && <0.10
  build-depends: text

common SDL
  hs-source-dirs: src
  other-modules: SDLRunner
  build-depends: linear
  build-depends: sdl2
  build-depends: OpenGL
  build-depends: StateVar

executable kaleidogen
  import: logic, canvas-save, shader-canvas, png
  main-is: Kaleidogen.hs
  default-language: Haskell2010
  other-modules: Animate
  other-modules: RunWidget
  build-depends: base >=4.11 && <5
  build-depends: MonadRandom ==0.5.*
  build-depends: text
  build-depends: base64-bytestring
  -- just for ghci. How to avoid?
  -- build-depends: QuickCheck

  if !impl(ghcjs)
    build-depends: jsaddle >=0.9.2 && <0.10
    build-depends: jsaddle-warp >=0.9.2 && <0.10

  if impl(ghcjs)
    ghc-options: -dedupe

  if !flag(jsaddle)
    buildable: False

  ghc-options: -main-is Kaleidogen
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

executable kaleidogen-demo
  import: logic, canvas-save, shader-canvas
  main-is: Demo.hs
  default-language: Haskell2010
  other-modules: RunWidget
  other-modules: PrettyRna
  build-depends: base >=4.11 && <5
  build-depends: MonadRandom ==0.5.*
  build-depends: text
  -- just for ghci. How to avoid?
  -- build-depends: QuickCheck

  if !impl(ghcjs)
    build-depends: jsaddle >=0.9.2 && <0.10
    build-depends: jsaddle-warp >=0.9.2 && <0.10

  if !flag(jsaddle)
    buildable: False

  ghc-options: -main-is Demo
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N


executable kaleidogen-sdl
  import: logic,SDL
  main-is: KaleidogenSDL.hs
  default-language: Haskell2010

  if !flag(sdl)
    buildable: False

  ghc-options: -main-is KaleidogenSDL

executable kaleidogen-android-sdl
  import: logic,SDL
  main-is: Kaleidogen.hs
  build-depends: android-activity
  default-language: Haskell2010

  if !flag(android) || !flag(sdl)
    buildable: False

  ghc-options: -main-is Kaleidogen

executable kaleidogen-headless
  import: static, png
  main-is: Headless.hs
  build-depends: optparse-applicative
  default-language: Haskell2010

  if !flag(headless)
    buildable: False


executable kaleidogen-telegram
  import: static, png
  main-is: TelegramMain.hs
  other-modules: Telegram
  build-depends: optparse-applicative
  build-depends: telegram-api
  build-depends: http-client
  build-depends: http-client-tls
  build-depends: servant-client
  build-depends: transformers
  build-depends: cryptonite
  build-depends: memory
  default-language:    Haskell2010

  if !flag(telegram)
    buildable: False

executable kaleidogen-amazon-lambda
  import: static, png
  main-is: Lambda.hs
  other-modules: Telegram
  build-depends: aeson
  build-depends: base64-bytestring
  build-depends: aws-lambda-haskell-runtime
  build-depends: telegram-api
  build-depends: http-client
  build-depends: http-client-tls
  build-depends: servant-client
  build-depends: transformers
  build-depends: cryptonite
  build-depends: memory
  default-language:    Haskell2010

  ghc-options: -Wall

  if !flag(lambda)
    buildable: False

executable kaleidogen-android-clib
  -- #import: logic
  hs-source-dirs: src
  other-modules: DNA
  other-modules: Logic
  other-modules: Drag
  other-modules: DragAnim
  other-modules: RNA
  other-modules: GLSL
  other-modules: Expression
  other-modules: Program
  other-modules: Shaders
  other-modules: Presentation
  other-modules: Layout
  build-depends: base >=4.11 && <5
  build-depends: MonadRandom ==0.5.*
  build-depends: containers
  build-depends: text
  build-depends: hex-text
  build-depends: bytestring
  build-depends: colour
  build-depends: mtl
  build-depends: base >=4.11 && <5
  build-depends: MonadRandom ==0.5.*
  build-depends: containers
  build-depends: jsaddle >=0.9.4 && <0.10
  build-depends: jsaddle-dom >=0.9.2 && <0.10
  build-depends: ghcjs-dom >=0.9.2 && <0.10
  build-depends: text

  main-is: Kaleidogen.hs
  build-depends: jsaddle
  build-depends: jsaddle-clib
  build-depends: reflex-dom
  default-language: Haskell2010

  if !flag(clib)
    buildable: False
  --  ghc-options: -main-is KaleidogenAndroid

test-suite tests
  import: logic
  hs-source-dirs: src
  other-modules: TestLogic
  build-depends: tasty
  build-depends: tasty-quickcheck
  build-depends: QuickCheck
  main-is: tests.hs
  type: exitcode-stdio-1.0
  default-language: Haskell2010
